// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls-Input/DateRangeConnected:Input base 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
  >
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            Mask DD.MM.YYYY
          </div>
          
        </div>
      </a>
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="02.02.2022"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.0000
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="03.02.2022"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.0000
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            Mask DD.MM.YY
          </div>
          
        </div>
      </a>
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="02.02.22"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="03.02.22"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            Mask MM.YYYY
          </div>
          
        </div>
      </a>
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="02.2022"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.0000
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="02.2022"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.0000
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            Mask YYYY
          </div>
          
        </div>
      </a>
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="2022"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    0000
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="2022"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    0000
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/DateRangeConnected:Input defaultValue 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
  >
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            defaultValue
          </div>
          
        </div>
      </a>
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="03.04.23"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="27.10.23"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col undefined "
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            defaultValue is empty
          </div>
          
        </div>
      </a>
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="  .  .  "
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="  .  .  "
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/DateRangeConnected:Input label 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
  >
    <div
      class="controls-Input-DateRange undefined controls-margin_top-m controls-Input-connected_filled tw-w-full"
      data-qa="controls-Input-DateRange"
    >
      <div
        class="controls-Input-DateRange__inputs"
      >
        <div
          class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
          data-qa="controls-BaseInput-Date"
          font-size="m"
          tabindex="0"
        >
          <div
            class="controls-Render__wrapper"
          >
            <span
              class="controls-Render__baseline"
            >
              ﻿
            </span>
            <div
              class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
              data-qa="controls-Render__field"
            >
              <div
                class="controls-InputBase__stretcher"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                  inputmode="text"
                  name="ws-input_1996-06-20"
                  spellcheck="false"
                  tabindex="0"
                  type="text"
                  value="02.02.22"
                />
                <div
                  class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                >
                  00.00.00
                </div>
              </div>
              <div
                class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
      />
      <div
        class="controls-Input-DateRange__inputs"
      >
        <div
          class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
          data-qa="controls-BaseInput-Date"
          font-size="m"
          tabindex="0"
        >
          <div
            class="controls-Render__wrapper"
          >
            <span
              class="controls-Render__baseline"
            >
              ﻿
            </span>
            <div
              class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
              data-qa="controls-Render__field"
            >
              <div
                class="controls-InputBase__stretcher"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                  inputmode="text"
                  name="ws-input_1996-06-20"
                  spellcheck="false"
                  tabindex="0"
                  type="text"
                  value="03.02.22"
                />
                <div
                  class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                >
                  00.00.00
                </div>
              </div>
              <div
                class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
      />
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-col controls-margin_top-m controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            label top
          </div>
          
        </div>
      </a>
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="02.02.22"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="03.02.22"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-row tw-items-baseline controls-margin_top-m controls-Input-connected_filled"
    >
      <a
        class="controls-Label controls-Label_underline_none tw-min-w-0 tw-flex-shrink"
      >
        <div
          class="controls-Label__wrapper"
        >
          <div
            class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
          >
            label start
          </div>
          
        </div>
      </a>
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="02.02.22"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="03.02.22"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
    <div
      class="tw-flex controls-max-w-full tw-flex-row tw-items-baseline controls-margin_top-m controls-Input-connected_filled"
    >
      <span
        class="controls-icon_size-s controls-icon_style-secondary icon-SabyBird controls-icon controls-margin_right-s"
      />
      <div
        class="controls-Input-DateRange"
        data-qa="controls-Input-DateRange"
      >
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_startValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="02.02.22"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="controls-Input-DateRange__dash controls-margin_right-2xs controls-margin_left-2xs"
        />
        <div
          class="controls-Input-DateRange__inputs"
        >
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Mask controls_Mask_theme-default controls-Input-DatePicker__content controls-DateBase controls-Input-DateRange_endValue controls-ValidateContainer__validationStatus-valid"
            data-qa="controls-BaseInput-Date"
            font-size="m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_autoWidth controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <div
                  class="controls-InputBase__stretcher"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default controls-InputBase__nativeField_stretcher controls-InputBase__stretcher-content"
                    inputmode="text"
                    name="ws-input_1996-06-20"
                    spellcheck="false"
                    tabindex="0"
                    type="text"
                    value="03.02.22"
                  />
                  <div
                    class="controls-InputBase__stretcher-block controls-InputBase__stretcher-block_margin-null"
                  >
                    00.00.00
                  </div>
                </div>
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          class="controls-icon_size-s controls-icon_style-label icon-Calendar controls-icon controls-Input-DateRange__button"
        />
      </div>
    </div>
  </div>
</div>
`;
